<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutName"
        style="@style/AddFragmentItems"
        android:hint="@string/item_rv_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutAge"
        style="@style/AddFragmentItems"
        android:hint="@string/item_rv_age"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutName">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutBreed"
        style="@style/AddFragmentItems"
        android:hint="@string/item_rv_breed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutAge">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputBreed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionDone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addButton"
        style="@style/AddFragmentItems"
        android:text="@string/button_name_add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutBreed" />

    <Button
        android:id="@+id/updateButton"
        style="@style/AddFragmentItems"
        android:text="@string/button_name_update"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutBreed" />

    <Button
        android:id="@+id/deleteButton"
        style="@style/AddFragmentItems"
        android:text="@string/button_name_delete"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateButton" />

</androidx.constraintlayout.widget.ConstraintLayout>